--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ MarkupSafe==2.1.1
 multidict==6.0.2
 pycares==4.2.2
 pycparser==2.21
+python-dotenv==0.21.0
 requests==2.28.1
 urllib3==1.26.12
 Werkzeug==2.2.2
