--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,6 @@ KUCOIN_PASSPHRASE='Your_passphrase_here'
 
 BINANCE_API_KEY='Your_api_key_here'
 BINANCE_API_SECRET_KEY='Your_api_secret_key_here'
+
+MEXC_API_KEY='Your_api_key_here'
+MEXC_API_SECRET_KEY='Your_api_secret_key_here'
