--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ multidict==6.0.2
 pycares==4.2.2
 pycparser==2.21
 python-dotenv==0.21.0
-requests==2.28.1
+requests>=2.31.0
 urllib3==1.26.12
 Werkzeug==2.2.2
 yarl==1.8.1
